# qualif

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: spack-ubuntu.yml
cmake/: common.cmake  version.cmake
src/: CMakeLists.txt
src/calqual_exe/: CMakeLists.txt  EcrireLima.h  qualite2.cpp
src/calqual_exe/cmake/: calqualConfig.cmake.in
src/donnees_tests/: ExpleAPI.cc  Maillage3D.unf  qualite.cc  reference
src/qualif/: Analyse.cpp  CMakeLists.txt
src/qualif/cmake/: QualifDistribution.h.in  qualifConfig.cmake.in
src/qualif/public/: Qualif.h
src/qualifinternal/: CMakeLists.txt  Hardware.cpp  Hexaedre.cpp  Maille.cpp  Matrice.cpp  Prisme.cpp  Pyramide.cpp  Quadrangle.cpp  Tetraedre.cpp  Triangle.cpp  ValidHexaedre.cpp  Vecteur.cpp  Version.cpp
src/qualifinternal/cmake/: qualifinternalConfig.cmake.in
src/qualifinternal/public/: ConfigQualif.h  ConstQualif.h  Fonctions.h  Hexaedre.h  IQualif.h  Maille.h  Matrice.h  Prisme.h  Pyramide.h  Quadrangle.h  TMatrice.h  Tetraedre.h  Triangle.h  Vecteur.h
test_link/: CMakeLists.txt  main.cpp
